[gd_scene load_steps=3 format=3 uid="uid://bweh7y0m744yq"]

[ext_resource type="Script" uid="uid://bug1ojm6bsc8l" path="res://components/Inn/Inn.gd" id="1_rr6sd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33ije"]
size = Vector2(160, 177)

[node name="Inn" type="Area2D"]
position = Vector2(-16, 80)
script = ExtResource("1_rr6sd")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24, -7.5)
shape = SubResource("RectangleShape2D_33ije")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="UpgradeButton" type="Button" parent="."]
offset_left = -88.0
offset_top = -144.0
offset_right = 134.0
offset_bottom = -113.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "UPGRADE"
icon_alignment = 1

[node name="UpgradeUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_right = 24.0

[node name="PanelContainer" type="PanelContainer" parent="UpgradeUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -89.5
offset_right = 77.5
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UpgradeUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeUI/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "TIMER"
horizontal_alignment = 1

[node name="TimerInnUpgradeButton" type="Button" parent="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level 1 Upgrade 50"

[node name="VBoxContainer2" type="VBoxContainer" parent="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AmountLabel" type="Label" parent="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "AMOUNT"
horizontal_alignment = 1

[node name="AmountInnUpgradeButton" type="Button" parent="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Level 1 Upgrade 50"

[node name="CloseButton" type="Button" parent="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CLOSE"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgrade_button_pressed"]
[connection signal="pressed" from="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/TimerInnUpgradeButton" to="." method="_on_timer_upgrade_button_pressed"]
[connection signal="pressed" from="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/AmountInnUpgradeButton" to="." method="_on_amount_upgrade_button_pressed"]
[connection signal="pressed" from="UpgradeUI/PanelContainer/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
